--- a/src/app/products/plan/plan-detail/plan-detail.component.html
+++ b/src/app/products/plan/plan-detail/plan-detail.component.html
@@ -104,32 +104,6 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5">
-        <div class="col-sm-12">
-            <div class="card">
-                <div class="card-header company-card-header">
-                    <div class="row">
-                        <div class="col-6">
-                            {{ "PRODUCTS.PLANS.INSURERSLIST" | translate }}
-                        </div>
-                        <div class="col-6">
-                            <button [disabled]="loading || loading_cancel || !editStatus" class="btn company-detail-button float-right mr-1" type="button" (click)="addInsurer()" *ngIf="canEdit || canCreate">
-                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                                {{ "PRODUCTS.PLANS.ADDINSURER" | translate }}
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <div class="container">
-                        <ag-grid-angular #agGrid style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="insurerList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="insurerRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onInsurersGridReady($event)">
-                            <ag-grid-column headerName="Nombre" field="xaseguradora" [width]="1036" [sortable]="true"></ag-grid-column>
-                        </ag-grid-angular>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="row mt-5 mb-5">
         <div class="col-sm-12">
             <div class="card">
@@ -175,8 +149,9 @@
                 </div>
                 <div class="card-body">
                     <div class="container">
-                        <ag-grid-angular #agGrid style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="serviceInsurerList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onServicesGridReady($event)">
-                            <ag-grid-column headerName="Nombre" field="xservicio" [width]="1040" [sortable]="true"></ag-grid-column>
+                        <ag-grid-angular #agGrid style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="serviceInsurerList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" [enableCellChangeFlash]="true" (gridReady)="onServicesGridReady($event)">
+                            <ag-grid-column headerName="Nombre" field="xservicio" [width]="520" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Tipo de Servicio" field="xtiposervicio" [width]="520" [sortable]="true"></ag-grid-column>
                         </ag-grid-angular>
                     </div>
                 </div>
