--- a/src/app/products/plan-rcv/plan-rcv-index/plan-rcv-index.component.html
+++ b/src/app/products/plan-rcv/plan-rcv-index/plan-rcv-index.component.html
@@ -14,6 +14,9 @@
                             {{ "PRODUCTS.PLAN_RCV.SEARCHPLANRCV" | translate }}
                         </div>
                         <div class="col-6">
+                            <button class="btn company-detail-button float-right" type="button" (click)="goToDetail()">
+                              {{ "PRODUCTS.PLAN_RCV.CREATE" | translate }}
+                            </button>
                             <button [disabled]="loading" class="btn company-detail-button float-right mr-1" type="button" (click)="onSubmit(search_form.value)">
                                 <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                                 {{ "PRODUCTS.PLAN_RCV.SEARCH" | translate }}
@@ -53,7 +56,8 @@
                 </div>
                 <div class="card-body">
                     <div class="container">
-                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="planRcvList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single">
+                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="planRcvList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="rowClicked($event)">
+                            <ag-grid-column headerName="C. Tarifa" field="ctarifa" [width]="110" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Clase" field="xclase" [width]="210" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Tipo" field="xtipo" [width]="215" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Grupo" field="xgrupo" [width]="258" [sortable]="true"></ag-grid-column>
@@ -129,3 +133,4 @@
       </div>
     </div>
   </footer>
+
