--- a/src/app/pop-up/notification-settlement/notification-settlement.component.html
+++ b/src/app/pop-up/notification-settlement/notification-settlement.component.html
@@ -54,36 +54,18 @@
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "EVENTS.SERVICEORDER.NAME" | translate }}</label>
-                                    <input type="text" formControlName="xnombre" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xnombre').errors }">
-                                    <div *ngIf="submitted && popup_form.get('xnombre').errors"  class="invalid-feedback">
-                                        <div *ngIf="popup_form.get('xnombre').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDNAME" | translate }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 col-md-4">
-                                <div class="form-group">
-                                    <label>{{ "EVENTS.SERVICEORDER.LASTNAME" | translate }}</label>
-                                    <input type="text" formControlName="xapellido" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xapellido').errors }">
-                                    <div *ngIf="submitted && popup_form.get('xapellido').errors"  class="invalid-feedback">
-                                        <div *ngIf="popup_form.get('xapellido').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDNAME" | translate }}</div>
+                                    <input type="text" formControlName="xnombres" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xnombres').errors }">
+                                    <div *ngIf="submitted && popup_form.get('xnombres').errors"  class="invalid-feedback">
+                                        <div *ngIf="popup_form.get('xnombres').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDNAME" | translate }}</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "EVENTS.SERVICEORDER.ALTERNATIVENAME" | translate }}</label>
-                                    <input type="text" formControlName="xnombrealternativo" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xnombrealternativo').errors }">
-                                    <div *ngIf="submitted && popup_form.get('xnombrealternativo').errors"  class="invalid-feedback">
-                                        <div *ngIf="popup_form.get('xnombrealternativo').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDNAME" | translate }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 col-md-4">
-                                <div class="form-group">
-                                    <label>{{ "EVENTS.SERVICEORDER.ALTERNATESURNAME" | translate }}</label>
-                                    <input type="text" formControlName="xapellidoalternativo" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xapellidoalternativo').errors }">
-                                    <div *ngIf="submitted && popup_form.get('xapellidoalternativo').errors"  class="invalid-feedback">
-                                        <div *ngIf="popup_form.get('xapellidoalternativo').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDNAME" | translate }}</div>
+                                    <input type="text" formControlName="xnombresalternativos" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xnombresalternativos').errors }">
+                                    <div *ngIf="submitted && popup_form.get('xnombresalternativos').errors"  class="invalid-feedback">
+                                        <div *ngIf="popup_form.get('xnombresalternativos').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDNAME" | translate }}</div>
                                     </div>
                                 </div>
                             </div>
@@ -108,12 +90,12 @@
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "EVENTS.SERVICEORDER.DAMAGES" | translate }}</label>
-                                    <select formControlName="crepuesto" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('crepuesto').errors }">
+                                    <select formControlName="xrepuesto" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xrepuesto').errors }" (change) = "changeServiceOrder()">
                                         <option></option>
-                                        <option *ngFor="let replacement of replacementList" value="{{ replacement.crepuesto }}">{{ replacement.xrepuesto }}</option>
+                                        <option *ngFor="let replacement of replacementList" value="{{ replacement.value }}">{{ replacement.value }}</option>
                                     </select>
-                                    <div *ngIf="submitted && popup_form.get('crepuesto').errors"  class="invalid-feedback">
-                                        <div *ngIf="popup_form.get('crepuesto').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDDOCUMENTTYPE" | translate }}</div>
+                                    <div *ngIf="submitted && popup_form.get('xrepuesto').errors"  class="invalid-feedback">
+                                        <div *ngIf="popup_form.get('xrepuesto').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDDOCUMENTTYPE" | translate }}</div>
                                     </div>
                                 </div>
                             </div>
@@ -131,19 +113,10 @@
                             </div>
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
-                                    <label>{{ "EVENTS.SERVICEORDER.OWNERNAME" | translate }}</label>
-                                    <input type="text" formControlName="xnombrepropietario" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xnombrepropietario').errors }">
-                                    <div *ngIf="submitted && popup_form.get('xnombrepropietario').errors"  class="invalid-feedback">
-                                        <div *ngIf="popup_form.get('xnombrepropietario').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDNAME" | translate }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 col-md-4">
-                                <div class="form-group">
-                                    <label>{{ "EVENTS.SERVICEORDER.OWNERLASTNAME" | translate }}</label>
-                                    <input type="text" formControlName="xapellidopropietario" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xapellidopropietario').errors }">
-                                    <div *ngIf="submitted && popup_form.get('xapellidopropietario').errors"  class="invalid-feedback">
-                                        <div *ngIf="popup_form.get('xapellidopropietario').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDNAME" | translate }}</div>
+                                    <label>{{ "EVENTS.SERVICEORDER.OWNER" | translate }}</label>
+                                    <input type="text" formControlName="xnombrespropietario" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xnombrespropietario').errors }">
+                                    <div *ngIf="submitted && popup_form.get('xnombrespropietario').errors"  class="invalid-feedback">
+                                        <div *ngIf="popup_form.get('xnombrespropietario').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDNAME" | translate }}</div>
                                     </div>
                                 </div>
                             </div>
@@ -176,28 +149,10 @@
                             </div>
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
-                                    <label>{{ "EVENTS.SERVICEORDER.COLOR" | translate }}</label>
-                                    <input type="text" formControlName="xcolor" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xcolor').errors }">
-                                    <div *ngIf="submitted && popup_form.get('xcolor').errors"  class="invalid-feedback">
-                                        <div *ngIf="popup_form.get('xcolor').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDIDENTIFICATIONDOCUMENT" | translate }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 col-md-4">
-                                <div class="form-group">
-                                    <label>{{ "EVENTS.SERVICEORDER.MARCA" | translate }}</label>
-                                    <input type="text" formControlName="xmarca" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xmarca').errors }">
-                                    <div *ngIf="submitted && popup_form.get('xmarca').errors"  class="invalid-feedback">
-                                        <div *ngIf="popup_form.get('xmarca').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDIDENTIFICATIONDOCUMENT" | translate }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 col-md-4">
-                                <div class="form-group">
-                                    <label>{{ "EVENTS.SERVICEORDER.MODEL" | translate }}</label>
-                                    <input type="text" formControlName="xmodelo" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xmodelo').errors }">
-                                    <div *ngIf="submitted && popup_form.get('xmodelo').errors"  class="invalid-feedback">
-                                        <div *ngIf="popup_form.get('xmodelo').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDIDENTIFICATIONDOCUMENT" | translate }}</div>
+                                    <label>{{ "EVENTS.SERVICEORDER.VEHICLE" | translate }}</label>
+                                    <input type="text" formControlName="xauto" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('xauto').errors }">
+                                    <div *ngIf="submitted && popup_form.get('xauto').errors"  class="invalid-feedback">
+                                        <div *ngIf="popup_form.get('xauto').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDIDENTIFICATIONDOCUMENT" | translate }}</div>
                                     </div>
                                 </div>
                             </div>
