--- a/src/app/administration/bill-loading/bill-loading.component.html
+++ b/src/app/administration/bill-loading/bill-loading.component.html
@@ -12,8 +12,14 @@
                     <div class="card" style="margin-left: -161px;">
                         <div class="card-header company-card-header">
                             <div class="row">
-                                <div class="col-6" style="margin-left: 268px; font-weight: bolder;">
+                                <div class="col-6" style="font-weight: bolder;">
                                     Carga de Facturas
+                                </div>
+                                <div class="col-6">
+                                    <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right mr-1" type="button" (click)="onSubmit(bill_form.value)"  *ngIf="showSaveButton">
+                                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                        Guardar
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -53,8 +59,8 @@
                                             <div class="form-outline">
                                             <label class="form-label" for="form3Examplev5">Tipo de Pagador</label>
                                             <select formControlName="xtipopagador" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && bill_form.get('xtipopagador').errors }" (change)="changePaymaster()">
-                                                <option value="cliente">CLIENTE</option>
-                                                <option value="empresa">EMPRESA</option>
+                                                <option value="CLIENTE">CLIENTE</option>
+                                                <option value="EMPRESA">EMPRESA</option>
                                             </select>
                                             <div *ngIf="submitted && bill_form.get('xtipopagador').errors" class="invalid-feedback">
                                                 <div *ngIf="bill_form.get('xtipopagador').errors.required">Se requiere completar el campo</div>
@@ -64,7 +70,7 @@
                                         <div class="col-sm-12 col-md-4">
                                             <div class="form-group">
                                                 <label>Pagador</label>
-                                                <select formControlName="cpagador" class="form-control" [ngClass]="{ 'is-invalid' : submitted && bill_form.get('cpagador').errors }">
+                                                <select formControlName="cpagador" class="form-control" [ngClass]="{ 'is-invalid' : submitted && bill_form.get('cpagador').errors }" (change)="changeStatus()">
                                                     <option></option>
                                                     <option *ngFor="let paymaster of paymasterList" value="{{ paymaster.id }}">{{ paymaster.value }}</option>
                                                 </select>
@@ -157,7 +163,7 @@
                                         Lista de Ordenes de Servicios 
                                     </div>
                                     <div class="col-6">
-                                        <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right mr-1" type="button" (click)="addServiceOrder()">
+                                        <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right mr-1" type="button" (click)="addServiceOrder()" *ngIf="showEditButton">
                                             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                                             Añadir Ordenes
                                         </button>
@@ -166,26 +172,72 @@
                             </div>
                             <div class="card-body">
                                 <div class="container">
-                                    <ag-grid-angular #agGrid style="width: 100%; height: 330px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceOrderRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onServiceOrderGridReady($event)">
+                                    <ag-grid-angular #agGrid style="width: 100%; height: 250px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" [enableCellChangeFlash]="true" (gridReady)="onServiceOrderGridReady($event)">
                                         <ag-grid-column headerName="Codigo" field="corden" [width]="100" [sortable]="true"></ag-grid-column>
-                                        <ag-grid-column headerName="Servicio" field="xservicio" [width]="120" [sortable]="true"></ag-grid-column>
+                                        <ag-grid-column headerName="Servicio" field="xservicio" [width]="180" [sortable]="true"></ag-grid-column>
                                         <ag-grid-column headerName="Monto grúa" field="mmontototal" [width]="130" [sortable]="true"></ag-grid-column>
+                                        <ag-grid-column headerName="Moneda grúa" field="xmonedagrua" [width]="180" [sortable]="true"></ag-grid-column>
                                         <ag-grid-column headerName="Monto Cotizacion" field="mtotal" [width]="130" [sortable]="true"></ag-grid-column>
+                                        <ag-grid-column headerName="Moneda Cotizacion" field="xmonedacoti" [width]="180" [sortable]="true"></ag-grid-column>
                                     </ag-grid-angular>
                                 </div>
+                                <br>
+                                <form [formGroup]="bill_form" class="parent">
+                                    <div class="col-sm-10">
+                                        <div class="form-group">
+                                            <label style="font-weight: bolder;text-align: center;">Sumatoria de Grúa</label>
+                                            <input type="text" formControlName="msumatoriagrua" class="form-control" [ngClass]="{ 'is-invalid' : submitted && bill_form.get('msumatoriagrua').errors }" style="text-align: center;">
+                                            <div *ngIf="submitted && bill_form.get('msumatoriagrua').errors"  class="invalid-feedback">
+                                                <div *ngIf="bill_form.get('msumatoriagrua').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-10">
+                                        <div class="form-group">
+                                            <label style="font-weight: bolder;text-align: center;">Sumatoria de cotizacion</label>
+                                            <input type="text" formControlName="msumatoriacotizacion" class="form-control" [ngClass]="{ 'is-invalid' : submitted && bill_form.get('msumatoriacotizacion').errors }" style="text-align: center;">
+                                            <div *ngIf="submitted && bill_form.get('msumatoriacotizacion').errors"  class="invalid-feedback">
+                                                <div *ngIf="bill_form.get('msumatoriacotizacion').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
-                        <div class="card" style="margin-left: 65px;margin-top: 26px;">
+                        <div class="card" style="margin-left: 65px; margin-top: 23px;">
                             <div class="card-header company-card-header">
                                 <div class="row">
-                                    <div class="col-6" style="margin-left: 250px; font-weight: bolder;">
+                                    <div class="col-6" style="font-weight: bolder;">
                                         Lista de Finiquitos
+                                    </div>
+                                    <div class="col-6">
+                                        <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right mr-1" type="button" (click)="addSettlement()" *ngIf="showEditButton">
+                                            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                            Añadir Finiquitos
+                                        </button>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-body">
-                                <form [formGroup]="bill_form">
-                
+                                <div class="container">
+                                    <ag-grid-angular #agGrid style="width: 100%; height: 250px;" class="ag-theme-alpine" [rowData]="settlementList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" [enableCellChangeFlash]="true" (gridReady)="onSettlementGridReady($event)">
+                                        <ag-grid-column headerName="Codigo" field="cfiniquito" [width]="100" [sortable]="true"></ag-grid-column>
+                                        <ag-grid-column headerName="Servicio" field="xdanos" [width]="200" [sortable]="true"></ag-grid-column>
+                                        <ag-grid-column headerName="Monto grúa" field="mmontofiniquito" [width]="130" [sortable]="true"></ag-grid-column>
+                                        <ag-grid-column headerName="Moneda grúa" field="xmoneda" [width]="130" [sortable]="true"></ag-grid-column>
+                                    </ag-grid-angular>
+                                </div>
+                                <br>
+                                <form [formGroup]="bill_form" class="parent">
+                                    <div class="col-sm-10" style="margin-left: 277px;">
+                                        <div class="form-group">
+                                            <label style="font-weight: bolder;text-align: center;">Sumatoria de Finiquitos</label>
+                                            <input type="text" formControlName="msumatoriafiniquito" class="form-control" [ngClass]="{ 'is-invalid' : submitted && bill_form.get('msumatoriafiniquito').errors }" style="text-align: center;">
+                                            <div *ngIf="submitted && bill_form.get('msumatoriafiniquito').errors"  class="invalid-feedback">
+                                                <div *ngIf="bill_form.get('msumatoriafiniquito').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </form>
                             </div>
                         </div>
