--- a/src/app/pop-up/bill-loading-service-order/bill-loading-service-order.component.html
+++ b/src/app/pop-up/bill-loading-service-order/bill-loading-service-order.component.html
@@ -1,59 +1,60 @@
 <div class="modal-header">
-    <h4 class="modal-tittle">{{ "SECURITY.USERS.PROVIDER" | translate }}</h4>
+    <h4 class="modal-tittle">Seleccionar Ordenes de Servicios</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.close(false)">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<div class="modal-body">
-    <ngb-alert *ngIf="alert.show" [type]="alert.type" (close)="alert.show = false;">{{ alert.message | translate }}</ngb-alert>
-    <div class="row mt-2">
-        <div class="col-sm-12">
-            <div class="card">
-                <div class="card-header company-card-header">
-                    <div class="row">
-                        <div class="col-6">
-                            Lista de Ordenes de Servicios
-                        </div>
-                        <!-- <div class="col-6">
-                            <button [disabled]="loading" class="btn company-detail-button float-right" type="button" (click)="searchServiceOrder()">
-                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                                Buscar
-                            </button>
-                        </div> -->
-                    </div>
-                </div>
-                <div class="card-body">
-                    <div class="container">
-                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceOrderRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onServiceOrderGridReady($event)">
-                            <ag-grid-column headerName="Codigo" field="corden" [width]="120" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Cliente" field="xcliente" [width]="200" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Proveedor" field="xnombre" [width]="200" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Servicio" field="xservicio" [width]="200" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Monto Grua" field="mmontototal" [width]="150" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Monto Cotizacion" field="mtotal" [width]="150" [sortable]="true"></ag-grid-column>
-                        </ag-grid-angular>
+<div class="modal-body">    
+    <div class="col-sm-12">
+        <div class="card">
+            <div class="card-header company-card-header">
+                <div class="row">
+                    <div class="col-6" style="font-weight: bolder;">
+                        Lista de Ordenes de Servicios.
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-header company-card-header">
-                    <div class="row">
-                        <div class="col-6">
-                            Ordenes de Servicios
-                        </div>
+            <div class="card-body">
+                <div class="container">
+                    <ag-grid-angular #agGrid style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceOrderRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onServiceOrderGridReady($event)">
+                        <ag-grid-column headerName="Código" field="corden" [width]="100" [sortable]="true"></ag-grid-column>
+                        <ag-grid-column headerName="Cliente" field="xcliente" [width]="240" [sortable]="true" style="text-align: center;"></ag-grid-column>
+                        <ag-grid-column headerName="Servicio" field="xservicio" [width]="225" [sortable]="true" style="text-align: center;"></ag-grid-column>
+                        <ag-grid-column headerName="Monto de Grua" field="mmontototal" [width]="140" [sortable]="true"></ag-grid-column>
+                        <ag-grid-column headerName="Moneda grúa" field="xmonedagrua" [width]="140" [sortable]="true"></ag-grid-column>
+                        <ag-grid-column headerName="Monto Cotizacion" field="mtotal" [width]="140" [sortable]="true"></ag-grid-column>
+                        <ag-grid-column headerName="Moneda Cotizacion" field="xmonedacoti" [width]="140" [sortable]="true"></ag-grid-column>
+                    </ag-grid-angular>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-5 mb-5">
+        <div class="card">
+            <div class="card-header company-card-header">
+                <div class="row">
+                    <div class="col-6" style="font-weight: bolder;">
+                        Lista de Ordenes de Servicios a Facturar
+                    </div>
+                    <div class="col-6">
+                        <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right mr-1" type="button" (click)="onSubmit()"  *ngIf="showSaveButton">
+                            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                            Guardar
+                        </button>
                     </div>
                 </div>
-                <div class="card-body">
-                    <div class="container">
-                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="acceptedServiceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" [enableCellChangeFlash]="true" (gridReady)="onAcceptedServiceOrderGridReady($event)">
-                            <ag-grid-column headerName="Codigo" field="corden" [width]="120" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Cliente" field="xcliente" [width]="200" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Proveedor" field="xnombre" [width]="200" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Servicio" field="xservicio" [width]="200" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Monto Grua" field="mmontototal" [width]="150" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Monto Cotizacion" field="mtotal" [width]="150" [sortable]="true"></ag-grid-column>
-                        </ag-grid-angular>
-                    </div>
+            </div>
+            <div class="card-body">
+                <div class="container">
+                    <ag-grid-angular #agGrid style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="acceptedServiceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single"  [enableCellChangeFlash]="true" (gridReady)="onAcceptedServiceOrderGridReady($event)">
+                        <ag-grid-column headerName="Código" field="corden" [width]="100" [sortable]="true"></ag-grid-column>
+                        <ag-grid-column headerName="Cliente" field="xcliente" [width]="240" [sortable]="true" style="text-align: center;"></ag-grid-column>
+                        <ag-grid-column headerName="Servicio" field="xservicio" [width]="225" [sortable]="true" style="text-align: center;"></ag-grid-column>
+                        <ag-grid-column headerName="Monto de Grua" field="mmontototal" [width]="140" [sortable]="true"></ag-grid-column>
+                        <ag-grid-column headerName="Moneda grúa" field="xmonedagrua" [width]="140" [sortable]="true"></ag-grid-column>
+                        <ag-grid-column headerName="Monto Cotizacion" field="mtotal" [width]="140" [sortable]="true"></ag-grid-column>
+                        <ag-grid-column headerName="Moneda Cotizacion" field="xmonedacoti" [width]="140" [sortable]="true"></ag-grid-column>
+                    </ag-grid-angular>
                 </div>
             </div>
         </div>
